option java_outer_classname = "LCConfirmAlarmMessage";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.monitor";


message ConfirmAlarmMessage{
	required	bool	isConfirmAll			=1;
	optional	int32	serialNumber			=2;
	optional	bool	emergency				=3;
	optional	bool	dangerous				=4;
	optional	bool	inOutArea				=5;
	optional	bool	inOutRoute				=6;
	optional	bool	segmentLackOrOverTime	=7;
	optional	bool	illegalIgnition			=8;
	optional	bool	illegalDisplacement		=9;
}
