option java_outer_classname = "LCInfoDemandOrCancel";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.monitor";

message InfoDemandOrCancel{
	required	int32	infoType		=1;
	required	bool	isDemand		=2; 
}
