option java_outer_classname = "LCSaveMultimediaUpload";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.monitor";

import "core/proto/terminal/common/java/MediaType.proto";
import "core/proto/terminal/common/java/EventCode.proto";

message SaveMultimediaUpload{
	required	MediaType		types				=1;
	required	int32			channels			=2;
	required    EventCode 		events				=3;
	required	int64			beginDate			=4;
	required	int64			endDate				=5;
	required	bool			isDelete			=6;
}

