option java_outer_classname = "LCDownPassThrough";
option java_package = "com.navinfo.opentsp.platform.location.protocol.terminal.query";

import "core/proto/terminal/common/java/PassType.proto";
message DownPassThrough{
	required PassType types = 1;
	required string passContents = 2;
}
